--- a/notebooks/study.ipynb
+++ b/notebooks/study.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,14 @@
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "# Set your OpenBB API key\n",
+    "openbb_api_key = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdXRoX3Rva2VuIjoiYU1zSm5idXl2V3lZY0tmY25jR3NjYnJNWjhkVjJaZVdWcERNRndCOSIsImV4cCI6MTc1OTcyNDQwOX0.2bbtSUb6fY59vRuup1yTUfyLNOwqV04Ea5LnPyBTfTk\"\n",
     "obb.account.login(pat=openbb_api_key)\n",
     "obb.user.preferences.output_type = \"dataframe\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +47,383 @@
     "    logger.info(f\"Fetched data head:\\n{data.head()}\")\n",
     "    logger.info(f\"Fetched data tail:\\n{data.tail()}\")\n",
     "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ticker = \"AAPL\"\n",
+    "train_date = [\"2024-10-21\", \"2024-10-30\"]\n",
+    "val_date = [\"2024-10-31\", \"2024-11-04\"]\n",
+    "test_date = [\"2024-11-05\", \"2024-11-06\"]\n",
+    "interval = \"1m\"\n",
+    "provider = \"fmp\"\n",
+    "overall_start_date = train_date[0]\n",
+    "overall_end_date = test_date[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:Fetching data for AAPL from 2024-10-21 to 2024-11-06\n",
+      "INFO:__main__:Fetched data head:\n",
+      "                       open    high     low   close   volume\n",
+      "date                                                        \n",
+      "2024-11-04 09:30:00  220.99  222.41  220.99  222.00  1379845\n",
+      "2024-11-04 09:31:00  221.96  222.33  221.07  221.53   293021\n",
+      "2024-11-04 09:32:00  221.53  221.69  220.80  220.83   268133\n",
+      "2024-11-04 09:33:00  220.86  221.41  220.38  221.36   221379\n",
+      "2024-11-04 09:34:00  221.31  221.34  220.54  220.67   167913\n",
+      "INFO:__main__:Fetched data tail:\n",
+      "                       open    high     low   close   volume\n",
+      "date                                                        \n",
+      "2024-11-06 15:55:00  223.06  223.24  222.71  222.72   360469\n",
+      "2024-11-06 15:56:00  222.71  222.72  222.50  222.64   293751\n",
+      "2024-11-06 15:57:00  222.64  222.70  222.55  222.69   252856\n",
+      "2024-11-06 15:58:00  222.69  222.78  222.55  222.56   421861\n",
+      "2024-11-06 15:59:00  222.56  222.78  222.51  222.70  1122154\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1170, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-11-04 09:30:00</th>\n",
+       "      <td>220.99</td>\n",
+       "      <td>222.41</td>\n",
+       "      <td>220.99</td>\n",
+       "      <td>222.00</td>\n",
+       "      <td>1379845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-04 09:31:00</th>\n",
+       "      <td>221.96</td>\n",
+       "      <td>222.33</td>\n",
+       "      <td>221.07</td>\n",
+       "      <td>221.53</td>\n",
+       "      <td>293021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-04 09:32:00</th>\n",
+       "      <td>221.53</td>\n",
+       "      <td>221.69</td>\n",
+       "      <td>220.80</td>\n",
+       "      <td>220.83</td>\n",
+       "      <td>268133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-04 09:33:00</th>\n",
+       "      <td>220.86</td>\n",
+       "      <td>221.41</td>\n",
+       "      <td>220.38</td>\n",
+       "      <td>221.36</td>\n",
+       "      <td>221379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-04 09:34:00</th>\n",
+       "      <td>221.31</td>\n",
+       "      <td>221.34</td>\n",
+       "      <td>220.54</td>\n",
+       "      <td>220.67</td>\n",
+       "      <td>167913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-06 15:55:00</th>\n",
+       "      <td>223.06</td>\n",
+       "      <td>223.24</td>\n",
+       "      <td>222.71</td>\n",
+       "      <td>222.72</td>\n",
+       "      <td>360469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-06 15:56:00</th>\n",
+       "      <td>222.71</td>\n",
+       "      <td>222.72</td>\n",
+       "      <td>222.50</td>\n",
+       "      <td>222.64</td>\n",
+       "      <td>293751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-06 15:57:00</th>\n",
+       "      <td>222.64</td>\n",
+       "      <td>222.70</td>\n",
+       "      <td>222.55</td>\n",
+       "      <td>222.69</td>\n",
+       "      <td>252856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-06 15:58:00</th>\n",
+       "      <td>222.69</td>\n",
+       "      <td>222.78</td>\n",
+       "      <td>222.55</td>\n",
+       "      <td>222.56</td>\n",
+       "      <td>421861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-06 15:59:00</th>\n",
+       "      <td>222.56</td>\n",
+       "      <td>222.78</td>\n",
+       "      <td>222.51</td>\n",
+       "      <td>222.70</td>\n",
+       "      <td>1122154</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1170 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       open    high     low   close   volume\n",
+       "date                                                        \n",
+       "2024-11-04 09:30:00  220.99  222.41  220.99  222.00  1379845\n",
+       "2024-11-04 09:31:00  221.96  222.33  221.07  221.53   293021\n",
+       "2024-11-04 09:32:00  221.53  221.69  220.80  220.83   268133\n",
+       "2024-11-04 09:33:00  220.86  221.41  220.38  221.36   221379\n",
+       "2024-11-04 09:34:00  221.31  221.34  220.54  220.67   167913\n",
+       "...                     ...     ...     ...     ...      ...\n",
+       "2024-11-06 15:55:00  223.06  223.24  222.71  222.72   360469\n",
+       "2024-11-06 15:56:00  222.71  222.72  222.50  222.64   293751\n",
+       "2024-11-06 15:57:00  222.64  222.70  222.55  222.69   252856\n",
+       "2024-11-06 15:58:00  222.69  222.78  222.55  222.56   421861\n",
+       "2024-11-06 15:59:00  222.56  222.78  222.51  222.70  1122154\n",
+       "\n",
+       "[1170 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data = fetch_data(\n",
+    "    ticker, overall_start_date, overall_end_date, interval, provider\n",
+    ")\n",
+    "print(full_data.shape)\n",
+    "full_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-11-27 09:30:00</th>\n",
+       "      <td>600.46</td>\n",
+       "      <td>600.62</td>\n",
+       "      <td>600.06</td>\n",
+       "      <td>600.09</td>\n",
+       "      <td>321609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-27 09:31:00</th>\n",
+       "      <td>600.09</td>\n",
+       "      <td>600.19</td>\n",
+       "      <td>599.94</td>\n",
+       "      <td>600.13</td>\n",
+       "      <td>135806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-27 09:32:00</th>\n",
+       "      <td>600.13</td>\n",
+       "      <td>600.29</td>\n",
+       "      <td>600.03</td>\n",
+       "      <td>600.29</td>\n",
+       "      <td>95601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-27 09:33:00</th>\n",
+       "      <td>600.28</td>\n",
+       "      <td>600.85</td>\n",
+       "      <td>600.27</td>\n",
+       "      <td>600.82</td>\n",
+       "      <td>252861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-27 09:34:00</th>\n",
+       "      <td>600.82</td>\n",
+       "      <td>600.82</td>\n",
+       "      <td>600.55</td>\n",
+       "      <td>600.63</td>\n",
+       "      <td>150482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-27 15:55:00</th>\n",
+       "      <td>598.62</td>\n",
+       "      <td>598.76</td>\n",
+       "      <td>598.55</td>\n",
+       "      <td>598.74</td>\n",
+       "      <td>185142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-27 15:56:00</th>\n",
+       "      <td>598.73</td>\n",
+       "      <td>598.73</td>\n",
+       "      <td>598.59</td>\n",
+       "      <td>598.70</td>\n",
+       "      <td>212071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-27 15:57:00</th>\n",
+       "      <td>598.68</td>\n",
+       "      <td>598.71</td>\n",
+       "      <td>598.50</td>\n",
+       "      <td>598.56</td>\n",
+       "      <td>173866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-27 15:58:00</th>\n",
+       "      <td>598.57</td>\n",
+       "      <td>598.75</td>\n",
+       "      <td>598.48</td>\n",
+       "      <td>598.71</td>\n",
+       "      <td>280637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-27 15:59:00</th>\n",
+       "      <td>598.74</td>\n",
+       "      <td>598.79</td>\n",
+       "      <td>598.58</td>\n",
+       "      <td>598.79</td>\n",
+       "      <td>818074</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>390 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       open    high     low   close  volume\n",
+       "date                                                       \n",
+       "2024-11-27 09:30:00  600.46  600.62  600.06  600.09  321609\n",
+       "2024-11-27 09:31:00  600.09  600.19  599.94  600.13  135806\n",
+       "2024-11-27 09:32:00  600.13  600.29  600.03  600.29   95601\n",
+       "2024-11-27 09:33:00  600.28  600.85  600.27  600.82  252861\n",
+       "2024-11-27 09:34:00  600.82  600.82  600.55  600.63  150482\n",
+       "...                     ...     ...     ...     ...     ...\n",
+       "2024-11-27 15:55:00  598.62  598.76  598.55  598.74  185142\n",
+       "2024-11-27 15:56:00  598.73  598.73  598.59  598.70  212071\n",
+       "2024-11-27 15:57:00  598.68  598.71  598.50  598.56  173866\n",
+       "2024-11-27 15:58:00  598.57  598.75  598.48  598.71  280637\n",
+       "2024-11-27 15:59:00  598.74  598.79  598.58  598.79  818074\n",
+       "\n",
+       "[390 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_monthly = obb.equity.price.historical(\n",
+    "    \"spy\", start_date=\"2024-10-21\", interval=\"1m\", provider=\"fmp\"\n",
+    ")\n",
+    "df_monthly"
    ]
   }
  ],
