--- a/notebooks/study.ipynb
+++ b/notebooks/study.ipynb
@@ -24,7 +24,6 @@
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "# Set your OpenBB API key\n",
-    "openbb_api_key = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdXRoX3Rva2VuIjoiYU1zSm5idXl2V3lZY0tmY25jR3NjYnJNWjhkVjJaZVdWcERNRndCOSIsImV4cCI6MTc1OTcyNDQwOX0.2bbtSUb6fY59vRuup1yTUfyLNOwqV04Ea5LnPyBTfTk\"\n",
     "obb.account.login(pat=openbb_api_key)\n",
     "obb.user.preferences.output_type = \"dataframe\""
    ]
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -304,44 +303,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2024-11-27 09:30:00</th>\n",
-       "      <td>600.46</td>\n",
-       "      <td>600.62</td>\n",
-       "      <td>600.06</td>\n",
-       "      <td>600.09</td>\n",
-       "      <td>321609</td>\n",
+       "      <th>2024-11-01 09:30:00</th>\n",
+       "      <td>220.97</td>\n",
+       "      <td>221.83</td>\n",
+       "      <td>220.27</td>\n",
+       "      <td>221.43</td>\n",
+       "      <td>1869295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-27 09:31:00</th>\n",
-       "      <td>600.09</td>\n",
-       "      <td>600.19</td>\n",
-       "      <td>599.94</td>\n",
-       "      <td>600.13</td>\n",
-       "      <td>135806</td>\n",
+       "      <th>2024-11-01 09:31:00</th>\n",
+       "      <td>221.39</td>\n",
+       "      <td>222.35</td>\n",
+       "      <td>221.02</td>\n",
+       "      <td>222.07</td>\n",
+       "      <td>659893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-27 09:32:00</th>\n",
-       "      <td>600.13</td>\n",
-       "      <td>600.29</td>\n",
-       "      <td>600.03</td>\n",
-       "      <td>600.29</td>\n",
-       "      <td>95601</td>\n",
+       "      <th>2024-11-01 09:32:00</th>\n",
+       "      <td>222.16</td>\n",
+       "      <td>222.30</td>\n",
+       "      <td>221.19</td>\n",
+       "      <td>221.26</td>\n",
+       "      <td>542891</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-27 09:33:00</th>\n",
-       "      <td>600.28</td>\n",
-       "      <td>600.85</td>\n",
-       "      <td>600.27</td>\n",
-       "      <td>600.82</td>\n",
-       "      <td>252861</td>\n",
+       "      <th>2024-11-01 09:33:00</th>\n",
+       "      <td>221.27</td>\n",
+       "      <td>222.04</td>\n",
+       "      <td>221.17</td>\n",
+       "      <td>221.56</td>\n",
+       "      <td>550309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-27 09:34:00</th>\n",
-       "      <td>600.82</td>\n",
-       "      <td>600.82</td>\n",
-       "      <td>600.55</td>\n",
-       "      <td>600.63</td>\n",
-       "      <td>150482</td>\n",
+       "      <th>2024-11-01 09:34:00</th>\n",
+       "      <td>221.55</td>\n",
+       "      <td>222.24</td>\n",
+       "      <td>221.53</td>\n",
+       "      <td>222.24</td>\n",
+       "      <td>466675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -352,76 +351,76 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-27 15:55:00</th>\n",
-       "      <td>598.62</td>\n",
-       "      <td>598.76</td>\n",
-       "      <td>598.55</td>\n",
-       "      <td>598.74</td>\n",
-       "      <td>185142</td>\n",
+       "      <th>2024-11-04 15:55:00</th>\n",
+       "      <td>221.98</td>\n",
+       "      <td>222.01</td>\n",
+       "      <td>221.52</td>\n",
+       "      <td>221.67</td>\n",
+       "      <td>335892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-27 15:56:00</th>\n",
-       "      <td>598.73</td>\n",
-       "      <td>598.73</td>\n",
-       "      <td>598.59</td>\n",
-       "      <td>598.70</td>\n",
-       "      <td>212071</td>\n",
+       "      <th>2024-11-04 15:56:00</th>\n",
+       "      <td>221.67</td>\n",
+       "      <td>221.72</td>\n",
+       "      <td>221.61</td>\n",
+       "      <td>221.68</td>\n",
+       "      <td>218993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-27 15:57:00</th>\n",
-       "      <td>598.68</td>\n",
-       "      <td>598.71</td>\n",
-       "      <td>598.50</td>\n",
-       "      <td>598.56</td>\n",
-       "      <td>173866</td>\n",
+       "      <th>2024-11-04 15:57:00</th>\n",
+       "      <td>221.67</td>\n",
+       "      <td>221.86</td>\n",
+       "      <td>221.62</td>\n",
+       "      <td>221.81</td>\n",
+       "      <td>223454</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-27 15:58:00</th>\n",
-       "      <td>598.57</td>\n",
-       "      <td>598.75</td>\n",
-       "      <td>598.48</td>\n",
-       "      <td>598.71</td>\n",
-       "      <td>280637</td>\n",
+       "      <th>2024-11-04 15:58:00</th>\n",
+       "      <td>221.81</td>\n",
+       "      <td>221.93</td>\n",
+       "      <td>221.81</td>\n",
+       "      <td>221.84</td>\n",
+       "      <td>218811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-27 15:59:00</th>\n",
-       "      <td>598.74</td>\n",
-       "      <td>598.79</td>\n",
-       "      <td>598.58</td>\n",
-       "      <td>598.79</td>\n",
-       "      <td>818074</td>\n",
+       "      <th>2024-11-04 15:59:00</th>\n",
+       "      <td>221.83</td>\n",
+       "      <td>222.16</td>\n",
+       "      <td>221.81</td>\n",
+       "      <td>222.12</td>\n",
+       "      <td>832204</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>390 rows × 5 columns</p>\n",
+       "<p>780 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       open    high     low   close  volume\n",
-       "date                                                       \n",
-       "2024-11-27 09:30:00  600.46  600.62  600.06  600.09  321609\n",
-       "2024-11-27 09:31:00  600.09  600.19  599.94  600.13  135806\n",
-       "2024-11-27 09:32:00  600.13  600.29  600.03  600.29   95601\n",
-       "2024-11-27 09:33:00  600.28  600.85  600.27  600.82  252861\n",
-       "2024-11-27 09:34:00  600.82  600.82  600.55  600.63  150482\n",
-       "...                     ...     ...     ...     ...     ...\n",
-       "2024-11-27 15:55:00  598.62  598.76  598.55  598.74  185142\n",
-       "2024-11-27 15:56:00  598.73  598.73  598.59  598.70  212071\n",
-       "2024-11-27 15:57:00  598.68  598.71  598.50  598.56  173866\n",
-       "2024-11-27 15:58:00  598.57  598.75  598.48  598.71  280637\n",
-       "2024-11-27 15:59:00  598.74  598.79  598.58  598.79  818074\n",
+       "                       open    high     low   close   volume\n",
+       "date                                                        \n",
+       "2024-11-01 09:30:00  220.97  221.83  220.27  221.43  1869295\n",
+       "2024-11-01 09:31:00  221.39  222.35  221.02  222.07   659893\n",
+       "2024-11-01 09:32:00  222.16  222.30  221.19  221.26   542891\n",
+       "2024-11-01 09:33:00  221.27  222.04  221.17  221.56   550309\n",
+       "2024-11-01 09:34:00  221.55  222.24  221.53  222.24   466675\n",
+       "...                     ...     ...     ...     ...      ...\n",
+       "2024-11-04 15:55:00  221.98  222.01  221.52  221.67   335892\n",
+       "2024-11-04 15:56:00  221.67  221.72  221.61  221.68   218993\n",
+       "2024-11-04 15:57:00  221.67  221.86  221.62  221.81   223454\n",
+       "2024-11-04 15:58:00  221.81  221.93  221.81  221.84   218811\n",
+       "2024-11-04 15:59:00  221.83  222.16  221.81  222.12   832204\n",
        "\n",
-       "[390 rows x 5 columns]"
+       "[780 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_monthly = obb.equity.price.historical(\n",
-    "    \"spy\", start_date=\"2024-10-21\", interval=\"1m\", provider=\"fmp\"\n",
+    "    \"AAPL\", start_date=\"2024-11-01\", end_date=\"2024-11-04\", interval=\"1m\", provider=\"fmp\"\n",
     ")\n",
     "df_monthly"
    ]
